responsiveness fix, add more spacing in Users index page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -112,6 +112,7 @@
 
 .media-item {
   height: 100px;
+  margin-bottom: 30px;
 }
 
 /* CSS for USER PROFILE page */
